# task_manager

./: .env_example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: crud.py  main.py  schemas.py
app/database/: __init__.py  db.py  db_session.py
app/migrations/: env.py
app/migrations/versions/: 06a375054f65_initial_migration.py
app/models/: __init__.py  tasks.py  users.py
app/routers/: __init__.py  auth.py  tasks.py  users.py
tests/: __init__.py  conftest.py  test_auth_user.py  test_main.py  test_user.py
